--- a/introduction.ipynb
+++ b/introduction.ipynb
@@ -72,9 +72,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DOUBLE IS: FALSE"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "DEFINE DOUBLE => [ MULT 2 ]"
    ]
@@ -106,11 +117,103 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DOUBLE IS: FALSE"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[ DOUBLE TOK IS: GETFUNC [ DOUBLE ] ]A                     DEFINE DOUBLE => [ MULT 2 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions, lambdas and arrays\n",
+    "\n",
+    "These are all implemented using the same data structure, and can be converted to each other easily.  Functions and lambdas are arrays of instructions, with an attached context.  And macros are just arrays of instructions.\n",
+    "\n",
+    "Getting hold of a function is difficult, we have to be careful not to accidentally call it by mistake.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FALSE"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GETFUNC [ DOUBLE ]                                            DEFINE DOUBLE => [ MULT 2 ]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A[ DOUBLE TOK IS: GETFUNCTION DOUBLE TOK ]A"
+    "GETTYPE "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "->LAMBDA turns functions into LAMBDAs, and BIND declares a variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BIND DOUBLE_LAMBDA => ->LAMBDA GETFUNC [ DOUBLE ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DOUBLE_LAMBDA 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "->ARRAY turns a function or LAMBDA into an ARRAY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "->ARRAY DOUBLE_LAMBDA"
    ]
   },
   {
@@ -137,20 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1 2 3 4"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "MAP [  ] [ 1 2 3 4 ]"
    ]
@@ -272,6 +364,26 @@
    "outputs": [],
    "source": [
     "COUNTDOWN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GETFUNCTION ->STRING"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GETFUNCTION ->STRING [ GETFUNC ]"
    ]
   },
   {
